--- a/app/src/main/res/layout/activity_update_venue.xml
+++ b/app/src/main/res/layout/activity_update_venue.xml
@@ -8,18 +8,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/lightblue"
-        android:text="Update Venue"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="25dp"
-        android:padding="5sp"
-        android:textStyle="bold" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -52,7 +40,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginTop="10dp"
-                            android:text="Update Venue"
+                            android:text="Update Status"
                             android:textAlignment="center"
                             android:textSize="20dp" />
 
@@ -133,7 +121,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:text="Venue Name :"
+                        android:text="Status Note :"
                         android:textAlignment="center"
                         android:textSize="15dp" />
 
@@ -143,7 +131,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:text="ABC" />
+                        android:text="Under Maintenance" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -158,7 +146,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/blue"
-                        android:text="DElete" />
+                        android:text="Update" />
 
                     <Button
                         android:id="@+id/button8"
@@ -168,7 +156,7 @@
                         android:layout_marginRight="10dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/blue"
-                        android:text="Clear" />
+                        android:text="Reset" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -201,7 +189,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginTop="10dp"
-                            android:text="Update Status"
+                            android:text="Delete Venue"
                             android:textAlignment="center"
                             android:textSize="20dp" />
 
@@ -282,7 +270,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:text="Venue Name :"
+                        android:text="Venue Type  :"
                         android:textAlignment="center"
                         android:textSize="15dp" />
 
@@ -293,7 +281,7 @@
                         android:layout_marginRight="25dp"
                         android:layout_weight="1"
                         android:ems="10"
-                        android:hint="Name"
+                        android:hint="ABC"
                         android:inputType="textPersonName"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
@@ -313,7 +301,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/blue"
-                        android:text="Update" />
+                        android:text="Delete" />
 
                     <Button
                         android:id="@+id/button18"
@@ -323,7 +311,7 @@
                         android:layout_marginRight="10dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/blue"
-                        android:text="Clear" />
+                        android:text="Reset" />
                 </LinearLayout>
 
             </LinearLayout>
