--- a/app/src/main/res/layout/activity_venueitemlist.xml
+++ b/app/src/main/res/layout/activity_venueitemlist.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".venueitemlist">
 
 
 
@@ -147,7 +149,7 @@
                         android:orientation="vertical">
 
                         <Button
-                            android:id="@+id/button4"
+                            android:id="@+id/bookBtn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
