--- a/app/src/main/res/layout/activity_add_venue.xml
+++ b/app/src/main/res/layout/activity_add_venue.xml
@@ -40,7 +40,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/btnGallery"
                     android:layout_width="149dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="10sp"
@@ -59,7 +59,7 @@
 
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/venuePic"
                 android:layout_width="match_parent"
                 android:layout_height="251dp"
                 android:layout_marginTop="10dp"
