--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -69,7 +69,7 @@
             android:textColorHint="#B1B6B8" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -82,7 +82,7 @@
             android:textColorHint="#B1B6B8" />
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="20dp"
@@ -95,7 +95,7 @@
             android:textColorHint="#B1B6B8" />
 
         <EditText
-            android:id="@+id/confpass"
+            android:id="@+id/confpassword"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="20dp"
